; ModuleID = '/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_cache.c_nl_cache_free.c'
source_filename = "/home/carl/AnghaBench/lede/package/libs/libnl-tiny/src/extr_cache.c_nl_cache_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nl_cache = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"Freeing cache %p <%s>...\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nl_cache_free(%struct.nl_cache* %0) #0 {
  %2 = alloca %struct.nl_cache*, align 8
  store %struct.nl_cache* %0, %struct.nl_cache** %2, align 8
  %3 = load %struct.nl_cache*, %struct.nl_cache** %2, align 8
  %4 = icmp ne %struct.nl_cache* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %15

6:                                                ; preds = %1
  %7 = load %struct.nl_cache*, %struct.nl_cache** %2, align 8
  %8 = call i32 @nl_cache_clear(%struct.nl_cache* %7)
  %9 = load %struct.nl_cache*, %struct.nl_cache** %2, align 8
  %10 = load %struct.nl_cache*, %struct.nl_cache** %2, align 8
  %11 = call i32 @nl_cache_name(%struct.nl_cache* %10)
  %12 = call i32 @NL_DBG(i32 1, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), %struct.nl_cache* %9, i32 %11)
  %13 = load %struct.nl_cache*, %struct.nl_cache** %2, align 8
  %14 = call i32 @free(%struct.nl_cache* %13)
  br label %15

15:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @nl_cache_clear(%struct.nl_cache*) #1

declare dso_local i32 @NL_DBG(i32, i8*, %struct.nl_cache*, i32) #1

declare dso_local i32 @nl_cache_name(%struct.nl_cache*) #1

declare dso_local i32 @free(%struct.nl_cache*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
